fix mat-tab overflow issue on windows devices

--- a/apps/frontend/src/styling/material.scss
+++ b/apps/frontend/src/styling/material.scss
@@ -205,3 +205,7 @@
         }
     }
 }
+
+.mat-tab-body-content {
+    overflow: hidden !important;
+}
